[package]
name = "prover"
version.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = "0.2.100"
stwo-prover = {git = "https://github.com/chudkowsky/stwo.git",rev = "533d186",default-features = false}
itertools = "0.12.0"
num-traits = "0.2.17"
serde_json = "1.0.64"
serde = { version = "1.0.64", features = ["derive",], default-features = false }

[dev-dependencies]
server = { path = "../server" }

[lib]
crate-type = ["cdylib"]
