[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8.1"
serde ={ version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http={version = "0.6.2", features = ["cors"]}
stwo-prover = {git = "https://github.com/chudkowsky/stwo.git",rev = "533d186",default-features = false}
serde_json = "1.0.64"
itertools = "0.12.0"
